2006-04-26  Andreas Kupries <andreask@activestate.com>

	* sak.tcl (gd-gen-tap): modified to strip non-version characters
	  out of version numbers.

2006-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* all.tcl: Removed the definitions of the common test constraints,
	  and the emulations of the 'wrongNumArgs' and 'tooManyArgs'
	  commands. These have all moved into the new common test support
	  code found in "devtools".

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl: Removed all functionality related to execution of
	  .timing files. They are superceded by the benchmarks provided
	  through .bench files.

	* modules/aes/aes.timing: Removed, superceded by .bench files.
	* modules/des/des.timing:
	* modules/rc4/rc4.timing:
	* modules/blowfish/blowfish.timing

2005-11-02  Andreas Kupries <andreask@activestate.com>

	* sak.tcl (ppackages): Added hack to exclude the package @@ from
	  the tap file. This is defined in template code in
	  page/gen_peg_cpkg.tcl, i.e. a variable.

2005-10-27  Andreas Kupries <andreask@activestate.com>

	* sak.tcl (bench_mod): Modified default interp to use in
	  benchmarks from PATH to the interp executing SAK.

2005-10-21  Andreas Kupries <andreask@activestate.com>

	* sak.tcl: Extended benchmark facility. New command for removal of
	  columns from results. New option to explicitly specify a single
	  interpreter to use.

2005-10-18  Andreas Kupries <andreask@activestate.com>

	* sak.tcl: More benchmarking functionality, showing benchmark data
	  after the fact, implicit merging, and changing interp
	  information around. Now we need only some functionality to show
	  the data graphically, and possibly compute statistical
	  information.

2005-10-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: New module "bench". Benchmarking support
	  package.
	* sak.tcl: Added benchmarking functionality.
